--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ABOUT</title>
+    <title>ABOUT | blmsh.com</title>
 
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -31,7 +31,7 @@
             </div>
           </header>
 <div id="content">
-    <h1 class="letter">About</h1>
+    <h1 class="subtitle">About</h1>
     <div style="text-align: center"><img src="../Kashi_icon.png"width="300" height="300" alt="Icon" ></div>
     <p class="letter">
     >>名前：戈址（かし）<br/>
