--- a/works/index.html
+++ b/works/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WORKS</title>
+    <title>WORKS | blmsh.com</title>
 
     <link rel="stylesheet" href="./style.css">
 </head>
