--- a/about/index.html
+++ b/about/index.html
@@ -45,9 +45,17 @@
     メール：kashi.blemish@gmail.com<br/>
     Discord：null_cita<br/>
     twitter: <a href="https://x.com/kashi_blemish" target="_blank" rel="noopener noreferrer">@kashi_blemish</a><br/>
-    instagram:<a href="https://instagram.com/kashi_blemish"target="_blank" rel="noopener noreferrer">@kashi_blemish</a></div>
+    instagram:<a href="https://instagram.com/kashi_blemish"target="_blank" rel="noopener noreferrer">@kashi_blemish</a><br>
+
+    <br>
+    >>バナー画像<br>
+    <a href="https://x.com/kashi_blemish" target="_blank" rel="noreferrer noopener"><img src="../site_banner.png" width="200px" height="auto" border="0"alt="戈址 twitterバナー"></a>
+  
+  </div>
 
 </p>
+
+
 </div>
 </body>
 </html>
