--- a/works/index.html
+++ b/works/index.html
@@ -69,7 +69,7 @@
                 <img src="./all_works/Zipdow_logo.png">
             </li>
             <li>
-                <h4>[LOGO]M3-2024-Autumn ZIP堂</h4>
+                <h4>[Logo]M3-2024-Autumn ZIP堂</h4>
                 <p>Date:2024.10.27<br>
                 <a href="https://www.instagram.com/p/DCotufaTdC6/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
