--- a/works/index.html
+++ b/works/index.html
@@ -19,10 +19,10 @@
               </div>
               <nav class="header_nav">
                 <ul class="header_nav_lists">
-                  <li><a class="nav_link" href="../index.html">HOME</a></li>
-                  <li><a class="nav_link" href="../about/index.html">ABOUT</a></li>
-                  <li><a class="nav_link" href="./index.html">WORKS</a></li>
-                  <li><a class="nav_link" href="../link/index.html">LINK</a></li>
+                  <li><a class="nav_link" href="http://blmsh.com">HOME</a></li>
+                  <li><a class="nav_link" href="../about">ABOUT</a></li>
+                  <li><a class="nav_link" href="./works">WORKS</a></li>
+                  <li><a class="nav_link" href="../link">LINK</a></li>
                   <li><a class="nav_link" href="https://linktr.ee/kashi_blemish" target="_blank" rel="noopener noreferrer">
                         ACCESS</a></li>
                   <li><a class="nav_link" href="mailto:kashi.blemish@gmail.com">CONTACT</a></li>
