--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,7 @@
 
     <br>
     >>バナー画像<br>
-    <a href="https://x.com/kashi_blemish" target="_blank" rel="noreferrer noopener"><img src="../site_banner.png" width="200px" height="auto" border="0"alt="戈址 twitterバナー"></a>
+    <a href="http://blmsh.com" target="_blank" rel="noreferrer noopener"><img src="../site_banner.png" width="200px" height="auto" border="0"alt="戈址 twitterバナー"></a>
   
   </div>
 
