--- a/link/index.html
+++ b/link/index.html
@@ -39,6 +39,7 @@
           <p>当サイトはリンクフリーです。</p>
           <p>バナーにはこちらをお使いください。</p>
           <img src="../site_banner.png" class="kashi" width="400px" height="80px">
+          <input type="text" value="<a href="https://blmsh.com" target="_blank" rel="noreferrer noopener"><img src="https://blmsh.com/site_banner.png" width="200px" height="40px" alt="blmsh.com" readonly="readonly"></a>
         </div>
           <table>
             <thead>
