--- a/link/index.html
+++ b/link/index.html
@@ -6,7 +6,7 @@
     <title>LINK | blmsh.com</title>
 
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap" rel="stylesheet">
@@ -38,8 +38,9 @@
           <h1>リンク集</h1>
           <p>当サイトはリンクフリーです。</p>
           <p>バナーにはこちらをお使いください。</p>
-          <img src="../site_banner.png" class="kashi" width="400px" height="80px">
-          <input type="text" value="<a href="https://blmsh.com" target="_blank" rel="noreferrer noopener"><img src="https://blmsh.com/site_banner.png" width="200px" height="40px" alt="blmsh.com" readonly="readonly"></a>
+          <img src="../site_banner.png" class="kashi" width="400px" height="80px"><br>
+          <input type="text" value="&lt;a href=&quot;https://blmsh.com&quot; target=&quot;_blank&quot; rel=&quot;noreferrer noopener&quot;&gt;&lt;img src=&quot;https://blmsh.com/site_banner.png&quot; width=&quot;200px&quot; height=&quot;40px&quot; alt=&quot;blmsh.com&quot;&gt;&lt;/a&gt;
+          " readonly>
         </div>
           <table>
             <thead>
