--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="kashi_blemish" />
+    <meta name="twitter:title" content="blmsh.com" />
+    <meta name="twitter:description" content="Kashi's homepage" />
+    <meta name="twitter:image" content="https://blmsh.com/site_banner.png" />
     <title>HOME | blmsh.com</title>
 
     
