--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       </header>
  <div id="viewer">
     <div id="content">
-        <a href="./index.html">
+        <a href="http://blmsh.com">
         <img id="logo" src="./kashi_logo.png"></a><br/>
-        <a href="./about/index.html">ABOUT</a><br/>
-        <a href="./works/index.html">WORKS</a><br/>
-        <a href="./link/index.html">LINK</a><br/>
+        <a href="./about">ABOUT</a><br/>
+        <a href="./works">WORKS</a><br/>
+        <a href="./link">LINK</a><br/>
         <a href="https://linktr.ee/kashi_blemish" target="_blank" rel="noopener noreferrer">ACCESS</a><br/>
         <a href="mailto:kashi.blemish@gmail.com">CONTACT</a><br/>
 
