--- a/link/index.html
+++ b/link/index.html
@@ -33,7 +33,7 @@
                   <li><a class="nav_link" href="http://blmsh.com">HOME</a></li>
                   <li><a class="nav_link" href="../about">ABOUT</a></li>
                   <li><a class="nav_link" href="../works">WORKS</a></li>
-                  <li><a class="nav_link" href="./link">LINK</a></li>
+                  <li><a class="nav_link" href="../link">LINK</a></li>
                   <li><a class="nav_link" href="https://linktr.ee/kashi_blemish" target="_blank" rel="noopener noreferrer">
                         ACCESS</a></li>
                   <li><a class="nav_link" href="mailto:kashi.blemish@gmail.com">CONTACT</a></li>
