--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@
               <nav class="header_nav">
                 <ul class="header_nav_lists">
                   <li><a class="nav_link" href="http://blmsh.com">HOME</a></li>
-                  <li><a class="nav_link" href="./about">ABOUT</a></li>
+                  <li><a class="nav_link" href="../about">ABOUT</a></li>
                   <li><a class="nav_link" href="../works">WORKS</a></li>
                   <li><a class="nav_link" href="../link">LINK</a></li>
                   <li><a class="nav_link" href="https://linktr.ee/kashi_blemish" target="_blank" rel="noopener noreferrer">
