--- a/works/index.html
+++ b/works/index.html
@@ -32,7 +32,7 @@
                 <ul class="header_nav_lists">
                   <li><a class="nav_link" href="http://blmsh.com">HOME</a></li>
                   <li><a class="nav_link" href="../about">ABOUT</a></li>
-                  <li><a class="nav_link" href="./works">WORKS</a></li>
+                  <li><a class="nav_link" href="../works">WORKS</a></li>
                   <li><a class="nav_link" href="../link">LINK</a></li>
                   <li><a class="nav_link" href="https://linktr.ee/kashi_blemish" target="_blank" rel="noopener noreferrer">
                         ACCESS</a></li>
