--- a/link/index.html
+++ b/link/index.html
@@ -61,6 +61,9 @@
                   <th><a href="https://www.drunksskateco.com/merch/" target="_blank" rel="noreferrer noopener"><img src="./banner/drunks.png" width="200px" height="auto" border="0"alt="drunks サイトバナー"></a></th>
                   <th><a href="https://lit.link/MATCHABox" target="_blank" rel="noreferrer noopener"><img src="./banner/mb.png" width="200px" height="auto" border="0"alt="抹茶弁当 litlinkバナー"></a></th>
                 </tr>
+                <tr>
+                  <th><a href="https://lit.link/hiro1616" target="_blank" rel="noreferrer noopener"><img src="./banner/hiro.png" width="200px" height="auto" border="0"alt="hiro litlinkバナー"></a></th>
+                </tr>
 
 
 </body>
