--- a/works/index.html
+++ b/works/index.html
@@ -43,14 +43,29 @@
           </header>
           <div id="content">
           <h1 class="subtitle">ALL WORKS</h1>
-          
+          <ul class="works">
+            <li>
+                <img src="./all_works/AKIHABARA_1.jpg">
+            </li>
+            <li>
+                <h4>[T-shirt]AKIHABARA CYBER KONATA T</h4>
+                <p>Release:2024.11.21
+                    <br>
+                From. Drunks Skate Corporation
+                    <br>
+                <a href="https://www.drunksskateco.com/merch/akihabara-cyber-konata-t/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+          </ul>
 
           <ul class="works">
             <li>
-                <img src="./all_works/kollab_kashi_2.png">
+                <img src="./all_works/AKIHABARA_2.jpg">
             </li>
+            
             <li>
-                <h4>[T-shirt]AKIHABARA T Series</h4>
+                <h4>[T-shirt]AKIHABARA EATER KONATA T</h4>
                 <p>Release:2024.11.21
                     <br>
                 From. Drunks Skate Corporation
