--- a/link/index.html
+++ b/link/index.html
@@ -68,6 +68,7 @@
                 </tr>
                 <tr>
                   <th><a href="https://x.com/_ramo404" target="_blank" rel="noreferrer noopener"><img src="./banner/ramo404.png" width="200px" height="auto" border="0"alt="ramo404 twitterバナー"></a></th>
+                  <th><a href="https://carumecuo.tumblr.com" target="_blank" rel="noreferrer noopener"><img src="./banner/carumecuo.png" width="200px" height="auto" border="0"alt="carumecuo tumblrバナー"></a></th>
                 </tr>
 
 
