--- a/works/index.html
+++ b/works/index.html
@@ -82,6 +82,7 @@
             </p>
              </li>
           </ul>
+          <ul class="works">
             <li>
                 <img src="./all_works/AKIHABARA_1.jpg">
             </li>
