--- a/works/index.html
+++ b/works/index.html
@@ -62,7 +62,9 @@
               </li>
               <li>
                   <h4>[T-shirt]DANCHO Teeeee</h4>
-                  <p>Date:2025.2.23<br>
+                  <p>Release:2025.2.23<br>
+                From. kashi_blemish
+                    <br>
                   <a href="https://www.instagram.com/p/DGaYB0qJvoA" target="_blank" rel="noopener noreferrer">→About</a>
                   <br>
               </p>
@@ -76,7 +78,9 @@
             </li>
             <li>
                 <h4>[T-shirt]SNOW Teeeee</h4>
-                <p>Date:2025.2.23<br>
+                <p>Release:2025.2.23<br>
+                    From. kashi_blemish
+                    <br>
                 <a href="https://www.instagram.com/p/DGaY-RxJguB/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
