--- a/works/index.html
+++ b/works/index.html
@@ -173,7 +173,7 @@
                     <br>
                     From. JPxG
                     <br>
-                <a href="https://x.com/JPxG2023/status/1849055237832946026" target="_blank" rel="noopener noreferrer">→About</a>
+                <a href="https://archive.org/details/jpg009" target="_blank" rel="noopener noreferrer">→Archive</a>
                 <br>
             </p>
              </li>
