--- a/works/index.html
+++ b/works/index.html
@@ -45,6 +45,32 @@
           <h1 class="subtitle">ALL WORKS</h1>
           <ul class="works">
             <li>
+                <img src="./all_works/kamineko1.jpg">
+            </li>
+            <li>
+                <h4>[T-shirt]eco-ice Tee</h4>
+                <p>Date:2025.5.20<br>
+                    Collaborated by 噛みすぎるネコ<br>
+                <a href="https://www.instagram.com/p/DJ4IgnLpB_N/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+            </ul>
+            <ul class="works">
+                <li>
+                    <img src="./all_works/sumaki_t.jpg">
+                </li>
+                <li>
+                    <h4>[T-shirt]Neun Tee</h4>
+                    <p>Date:2025.3.27<br>
+                        Illustrated by 栖巻<br>
+                    <a href="https://www.instagram.com/p/DHrhyd5BdnV" target="_blank" rel="noopener noreferrer">→About</a>
+                    <br>
+                </p>
+                 </li>
+                </ul>
+          <ul class="works">
+            <li>
                 <img src="./all_works/MENTAA.jpg">
             </li>
             <li>
