--- a/works/index.html
+++ b/works/index.html
@@ -45,6 +45,44 @@
           <h1 class="subtitle">ALL WORKS</h1>
           <ul class="works">
             <li>
+                <img src="./all_works/HYBL99_icon.png">
+            </li>
+            <li>
+                <h4>[Logo]HYPER BLEMISH'99</h4>
+                <p>Date:2025.6.14<br>
+                <a href="https://www.instagram.com/p/DK14JwTTDgC/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+          </ul>        
+          <ul class="works">
+            <li>
+                <img src="./all_works/HYBL_Syan.jpg">
+            </li>
+            <li>
+                <h4>[Sticker]HYPER BLEMISH'99 - Syan</h4>
+                <p>Release:2025.6.14<br>
+                    Designed by HYPER BLEMISH'99<br>
+                <a href="https://www.instagram.com/p/DK13hWeTNJo/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+            </ul>   
+         <ul class="works">
+            <li>
+                <img src="./all_works/HYBL_Magenta.jpg">
+            </li>
+            <li>
+                <h4>[Sticker]HYPER BLEMISH'99 - Magenta</h4>
+                <p>Release:2025.6.14<br>
+                    Designed by HYPER BLEMISH'99<br>
+                <a href="https://www.instagram.com/p/DK13N4sT6ps/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+            </ul>   
+          <ul class="works">
+            <li>
                 <img src="./all_works/kamineko1.jpg">
             </li>
             <li>
