--- a/works/index.html
+++ b/works/index.html
@@ -63,6 +63,8 @@
                 <h4>[Sticker]HYPER BLEMISH'99 - Syan</h4>
                 <p>Release:2025.6.14<br>
                     Designed by HYPER BLEMISH'99<br>
+                    <a href="https://blmsh.base.shop/items/111023623" target="_blank" rel="noopener noreferrer">→Buy</a>
+                <br>
                 <a href="https://www.instagram.com/p/DK13hWeTNJo/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
@@ -76,6 +78,8 @@
                 <h4>[Sticker]HYPER BLEMISH'99 - Magenta</h4>
                 <p>Release:2025.6.14<br>
                     Designed by HYPER BLEMISH'99<br>
+                    <a href="https://blmsh.base.shop/items/111023623" target="_blank" rel="noopener noreferrer">→Buy</a>
+                <br>
                 <a href="https://www.instagram.com/p/DK13N4sT6ps/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
