--- a/about/index.html
+++ b/about/index.html
@@ -51,6 +51,8 @@
     >>できること：おしゃべりとデザインを少しだけ<br/>
     >>特技：カニクリームコロッケをおかずに白米を食べることができる<br/>
     <br>
+    >>ショップ<br/>
+    <a href="https://blmsh.base.shop/" target="_blank" rel="noopener noreferrer">click here!</a><br/>
     >>アドレス等<br/>
     依頼は下に記載されたアドレス及びDMまで！<br/>
     メール：kashi.blemish@gmail.com<br/>
