--- a/works/index.html
+++ b/works/index.html
@@ -45,16 +45,46 @@
           <h1 class="subtitle">ALL WORKS</h1>
           <ul class="works">
             <li>
-                <img src="./all_works/HYBL99_icon.png">
+                <img src="./all_works/angt_pic1.png">
             </li>
             <li>
-                <h4>[Logo]HYPER BLEMISH'99</h4>
-                <p>Date:2025.6.14<br>
-                <a href="https://www.instagram.com/p/DK14JwTTDgC/" target="_blank" rel="noopener noreferrer">→About</a>
+                <h4>[T-Shirt]LONGING ANGEL Tee</h4>
+                <p>Release:2025.6.20<br>
+                    Designed by EX MACHINA<br>
+                    <a href="https://blmsh.base.shop/items/111031258" target="_blank" rel="noopener noreferrer">→Buy</a>
+                <br>
+                <a href="https://www.instagram.com/p/DLH2kclzVkP/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
              </li>
-          </ul>        
+            </ul>
+            <ul class="works">
+            <li>
+                <img src="./all_works/mecht_pic1.png">
+            </li>
+            <li>
+                <h4>[T-Shirt]LETHAL Tee</h4>
+                <p>Release:2025.6.20<br>
+                    Designed by EX MACHINA<br>
+                    <a href="https://blmsh.base.shop/items/111035342" target="_blank" rel="noopener noreferrer">→Buy</a>
+                <br>
+                <a href="https://www.instagram.com/p/DLH2XXuz09m/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+            </ul>
+                      <ul class="works">
+            <li>
+                <img src="./all_works/EX_MACHINA.png">
+            </li>
+            <li>
+                <h4>[Logo]EX MACHINA</h4>
+                <p>Date:2025.6.20<br>
+                <a href="https://x.com/kashi_blemish/status/1935681915094479024" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+          </ul>            
           <ul class="works">
             <li>
                 <img src="./all_works/HYBL_Syan.jpg">
@@ -69,7 +99,8 @@
                 <br>
             </p>
              </li>
-            </ul>   
+            </ul>
+               
          <ul class="works">
             <li>
                 <img src="./all_works/HYBL_Magenta.jpg">
@@ -84,7 +115,32 @@
                 <br>
             </p>
              </li>
-            </ul>   
+            </ul>
+          <ul class="works">
+            <li>
+                <img src="./all_works/HYBL99_icon.png">
+            </li>
+            <li>
+                <h4>[Logo]HYPER BLEMISH'99</h4>
+                <p>Date:2025.6.14<br>
+                <a href="https://www.instagram.com/p/DK14JwTTDgC/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+          </ul>            
+          <ul class="works">
+            <li>
+                <img src="./all_works/kamineko2.jpg">
+            </li>
+            <li>
+                <h4>[T-shirt]Doki-Doki Onyanko School Bootleg Tee</h4>
+                <p>Date:2025.6.21<br>
+                    Collaborated by 噛みすぎるネコ<br>
+                <a href="https://www.instagram.com/p/DLLdEtAzfht" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+            </ul>     
           <ul class="works">
             <li>
                 <img src="./all_works/kamineko1.jpg">
