--- a/works/index.html
+++ b/works/index.html
@@ -220,7 +220,7 @@
                     <br>
                 From. Drunks Skate Corporation
                     <br>
-                <a href="https://www.drunksskateco.com/merch/akihabara-cyber-konata-t/" target="_blank" rel="noopener noreferrer">→About</a>
+                <a href="https://www.instagram.com/p/DG5WpICpJk3/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
              </li>
@@ -237,7 +237,7 @@
                     <br>
                 From. Drunks Skate Corporation
                     <br>
-                <a href="https://www.drunksskateco.com/merch/akihabara-eater-konata-t/" target="_blank" rel="noopener noreferrer">→About</a>
+                <a href="https://www.instagram.com/p/DG5W1toJN8h/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
              </li>
