--- a/works/index.html
+++ b/works/index.html
@@ -45,11 +45,26 @@
           <h1 class="subtitle">ALL WORKS</h1>
           <ul class="works">
             <li>
+                <img src="./all_works/sugee_flyer.png">
+            </li>
+            <li>
+                <h4>[Flyer]すげえインターネット</h4>
+                <p>Datee:2025.08.02
+                    <br>
+                    From. すげえインターネット
+                    <br>
+                <a href="https://x.com/sugeeinternet/status/1941436971517346104" target="_blank" rel="noopener noreferrer">→Detail</a>
+                <br>
+            </p>
+             </li>
+          </ul>
+          <ul class="works">
+            <li>
                 <img src="./all_works/angt_pic1.png">
             </li>
             <li>
                 <h4>[T-Shirt]LONGING ANGEL Tee</h4>
-                <p>Release:2025.6.20<br>
+                <p>Release:2025.06.20<br>
                     Designed by EX MACHINA<br>
                     <a href="https://blmsh.base.shop/items/111031258" target="_blank" rel="noopener noreferrer">→Buy</a>
                 <br>
@@ -64,7 +79,7 @@
             </li>
             <li>
                 <h4>[T-Shirt]LETHAL Tee</h4>
-                <p>Release:2025.6.20<br>
+                <p>Release:2025.06.20<br>
                     Designed by EX MACHINA<br>
                     <a href="https://blmsh.base.shop/items/111035342" target="_blank" rel="noopener noreferrer">→Buy</a>
                 <br>
@@ -79,7 +94,7 @@
             </li>
             <li>
                 <h4>[Logo]EX MACHINA</h4>
-                <p>Date:2025.6.20<br>
+                <p>Date:2025.06.20<br>
                 <a href="https://x.com/kashi_blemish/status/1935681915094479024" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
@@ -91,7 +106,7 @@
             </li>
             <li>
                 <h4>[Sticker]HYPER BLEMISH'99 - Syan</h4>
-                <p>Release:2025.6.14<br>
+                <p>Release:2025.06.14<br>
                     Designed by HYPER BLEMISH'99<br>
                     <a href="https://blmsh.base.shop/items/111023623" target="_blank" rel="noopener noreferrer">→Buy</a>
                 <br>
@@ -107,7 +122,7 @@
             </li>
             <li>
                 <h4>[Sticker]HYPER BLEMISH'99 - Magenta</h4>
-                <p>Release:2025.6.14<br>
+                <p>Release:2025.06.14<br>
                     Designed by HYPER BLEMISH'99<br>
                     <a href="https://blmsh.base.shop/items/111023623" target="_blank" rel="noopener noreferrer">→Buy</a>
                 <br>
@@ -122,7 +137,7 @@
             </li>
             <li>
                 <h4>[Logo]HYPER BLEMISH'99</h4>
-                <p>Date:2025.6.14<br>
+                <p>Date:2025.06.14<br>
                 <a href="https://www.instagram.com/p/DK14JwTTDgC/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
@@ -134,7 +149,7 @@
             </li>
             <li>
                 <h4>[T-shirt]Doki-Doki Onyanko School Bootleg Tee</h4>
-                <p>Date:2025.6.21<br>
+                <p>Date:2025.06.21<br>
                     Collaborated by 噛みすぎるネコ<br>
                 <a href="https://www.instagram.com/p/DLLdEtAzfht" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
@@ -147,7 +162,7 @@
             </li>
             <li>
                 <h4>[T-shirt]eco-ice Tee</h4>
-                <p>Date:2025.5.20<br>
+                <p>Date:2025.05.20<br>
                     Collaborated by 噛みすぎるネコ<br>
                 <a href="https://www.instagram.com/p/DJ4IgnLpB_N/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
@@ -160,7 +175,7 @@
                 </li>
                 <li>
                     <h4>[T-shirt]Neun Tee</h4>
-                    <p>Date:2025.3.27<br>
+                    <p>Date:2025.03.27<br>
                         Illustrated by 栖巻<br>
                     <a href="https://www.instagram.com/p/DHrhyd5BdnV" target="_blank" rel="noopener noreferrer">→About</a>
                     <br>
@@ -173,7 +188,7 @@
             </li>
             <li>
                 <h4>[Logo]mentaa_vrc</h4>
-                <p>Date:2025.3.27<br>
+                <p>Date:2025.03.27<br>
                 <a href="https://www.instagram.com/p/DHbds4_TKvq" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
@@ -186,7 +201,7 @@
               </li>
               <li>
                   <h4>[T-shirt]DANCHO Teeeee</h4>
-                  <p>Release:2025.2.23<br>
+                  <p>Release:2025.02.23<br>
                 From. kashi_blemish
                     <br>
                   <a href="https://www.instagram.com/p/DGaYB0qJvoA" target="_blank" rel="noopener noreferrer">→About</a>
@@ -202,7 +217,7 @@
             </li>
             <li>
                 <h4>[T-shirt]SNOW Teeeee</h4>
-                <p>Release:2025.2.23<br>
+                <p>Release:2025.02.23<br>
                     From. kashi_blemish
                     <br>
                 <a href="https://www.instagram.com/p/DGaY-RxJguB/" target="_blank" rel="noopener noreferrer">→About</a>
