--- a/works/index.html
+++ b/works/index.html
@@ -49,7 +49,7 @@
             </li>
             <li>
                 <h4>[Flyer]すげえインターネット</h4>
-                <p>Datee:2025.08.02
+                <p>Date:2025.08.02
                     <br>
                     From. すげえインターネット
                     <br>
