--- a/works/index.html
+++ b/works/index.html
@@ -49,8 +49,7 @@
             </li>
             <li>
                 <h4>[Flyer]すげえインターネット</h4>
-                <p>Date:2025.08.02
-                    <br>
+                <p>Release:2025.07.05<br>
                     From. すげえインターネット
                     <br>
                 <a href="https://x.com/sugeeinternet/status/1941436971517346104" target="_blank" rel="noopener noreferrer">→Detail</a>
