--- a/works/index.html
+++ b/works/index.html
@@ -43,6 +43,24 @@
           </header>
           <div id="content">
           <h1 class="subtitle">ALL WORKS</h1>
+            <ul class="works">
+            <li>
+                <img src="./all_works/sekazan_jacket.jpg">
+            </li>
+            <li>
+                <h4>[Design]PURIKURA MIND - 世界残酷物語</h4>
+                <p>Release:2025.07.09
+                    <br>
+                    From. PURIKURA MIND
+                    <br>
+                <a href=" https://linkco.re/8NfHTaP9" target="_blank" rel="noopener noreferrer">→Listen</a>
+                    <br>
+                <a href="https://www.instagram.com/p/DL2eEC9zZxs/" target="_blank" rel="noopener noreferrer">→About</a>
+                
+                <br>
+            </p>
+             </li>
+          </ul>
           <ul class="works">
             <li>
                 <img src="./all_works/sugee_flyer.png">
