--- a/works/index.html
+++ b/works/index.html
@@ -53,7 +53,7 @@
                     <br>
                     From. PURIKURA MIND
                     <br>
-                <a href=" https://linkco.re/8NfHTaP9" target="_blank" rel="noopener noreferrer">→Listen</a>
+                <a href=" https://linkco.re/8NfHTaP9" target="_blank" rel="noopener noreferrer">→Streaming</a>
                     <br>
                 <a href="https://www.instagram.com/p/DL2eEC9zZxs/" target="_blank" rel="noopener noreferrer">→About</a>
                 
