--- a/works/index.html
+++ b/works/index.html
@@ -331,6 +331,8 @@
                     <br>
                 <a href="https://archive.org/details/jpg009" target="_blank" rel="noopener noreferrer">→Archive</a>
                 <br>
+                <a href="https://www.instagram.com/p/DCrInnoT0Xa/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
             </p>
              </li>
           </ul>
@@ -347,7 +349,9 @@
                     <br>
                     From. ヌヅ
                     <br>
-                <a href="https://yapa8458.booth.pm/items/6068016" target="_blank" rel="noopener noreferrer">→About</a>
+                <a href="https://yapa8458.booth.pm/items/6068016" target="_blank" rel="noopener noreferrer">→Buy</a>
+                <br>
+                <a href="https://www.instagram.com/p/DBSTOPjT6XM" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
              </li>
