--- a/works/index.html
+++ b/works/index.html
@@ -80,7 +80,7 @@
                 <img src="./all_works/angt_pic1.png">
             </li>
             <li>
-                <h4>[T-Shirt]LONGING ANGEL Tee</h4>
+                <h4>[T-Shirt]EX MACHINA - LONGING ANGEL Tee</h4>
                 <p>Release:2025.06.20<br>
                     Designed by EX MACHINA<br>
                     <a href="https://blmsh.base.shop/items/111031258" target="_blank" rel="noopener noreferrer">→Buy</a>
@@ -95,7 +95,7 @@
                 <img src="./all_works/mecht_pic1.png">
             </li>
             <li>
-                <h4>[T-Shirt]LETHAL Tee</h4>
+                <h4>[T-Shirt]EX MACHINA - LETHAL Tee</h4>
                 <p>Release:2025.06.20<br>
                     Designed by EX MACHINA<br>
                     <a href="https://blmsh.base.shop/items/111035342" target="_blank" rel="noopener noreferrer">→Buy</a>
