--- a/works/index.html
+++ b/works/index.html
@@ -51,6 +51,8 @@
                 <h4>[Design]PURIKURA MIND - 世界残酷物語</h4>
                 <p>Release:2025.07.09
                     <br>
+                    Illustrated by キムラ
+                    <br>
                     From. PURIKURA MIND
                     <br>
                 <a href=" https://linkco.re/8NfHTaP9" target="_blank" rel="noopener noreferrer">→Streaming</a>
