--- a/works/index.html
+++ b/works/index.html
@@ -43,7 +43,21 @@
           </header>
           <div id="content">
           <h1 class="subtitle">ALL WORKS</h1>
-            <ul class="works">
+           <ul class="works">
+            <li>
+                <img src="./all_works/purimai_flyer_1.png">
+            </li>
+            <li>
+                <h4>[Flyer]PURIKURA MIND pre. "MY SOUL YOUR BEATS"</h4>
+                <p>Release:2025.07.09<br>
+                    From. PURIKURA MIND
+                    <br>
+                <a href="https://t.livepocket.jp/e/my_soul_your_beats" target="_blank" rel="noopener noreferrer">→Buy</a>
+                <br>
+            </p>
+             </li>
+          </ul> 
+          <ul class="works">
             <li>
                 <img src="./all_works/sekazan_jacket.jpg">
             </li>
