--- a/works/index.html
+++ b/works/index.html
@@ -93,7 +93,7 @@
           </ul>
           <ul class="works">
             <li>
-                <img src="./all_works/angt_pic1.png">
+                <img src="./all_works/angel.jpg">
             </li>
             <li>
                 <h4>[T-Shirt]EX MACHINA - LONGING ANGEL Tee</h4>
@@ -101,14 +101,14 @@
                     Designed by EX MACHINA<br>
                     <a href="https://blmsh.base.shop/items/111031258" target="_blank" rel="noopener noreferrer">→Buy</a>
                 <br>
-                <a href="https://www.instagram.com/p/DLH2kclzVkP/" target="_blank" rel="noopener noreferrer">→About</a>
+                <a href="https://www.instagram.com/p/DMSc29tpx84/ " target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
              </li>
             </ul>
             <ul class="works">
             <li>
-                <img src="./all_works/mecht_pic1.png">
+                <img src="./all_works/lethal.jpg">
             </li>
             <li>
                 <h4>[T-Shirt]EX MACHINA - LETHAL Tee</h4>
@@ -116,7 +116,7 @@
                     Designed by EX MACHINA<br>
                     <a href="https://blmsh.base.shop/items/111035342" target="_blank" rel="noopener noreferrer">→Buy</a>
                 <br>
-                <a href="https://www.instagram.com/p/DLH2XXuz09m/" target="_blank" rel="noopener noreferrer">→About</a>
+                <a href="https://www.instagram.com/p/DMScmt6p0lc/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
              </li>
