--- a/works/index.html
+++ b/works/index.html
@@ -88,6 +88,8 @@
                     <br>
                 <a href="https://x.com/sugeeinternet/status/1941436971517346104" target="_blank" rel="noopener noreferrer">→Detail</a>
                 <br>
+                <a href="https://www.instagram.com/p/DMpcW0dzpnQ/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
             </p>
              </li>
           </ul>
