--- a/works/index.html
+++ b/works/index.html
@@ -43,6 +43,24 @@
           </header>
           <div id="content">
           <h1 class="subtitle">ALL WORKS</h1>
+          <ul class="works">
+            <li>
+                <img src="./all_works/twitter_jacket.png">
+            </li>
+            <li>
+                <h4>[Design]PURIKURA MIND - Twitter</h4>
+                <p>Release:2025.07.09
+                    <br>
+                    From. PURIKURA MIND
+                    <br>
+                <a href="https://linkco.re/RDUVQph8" target="_blank" rel="noopener noreferrer">→Streaming</a>
+                    <br>
+                <a href="https://www.instagram.com/p/DM_alDRTaxr/" target="_blank" rel="noopener noreferrer">→About</a>
+                
+                <br>
+            </p>
+             </li>
+          </ul>
            <ul class="works">
             <li>
                 <img src="./all_works/purimai_flyer_1.png">
