--- a/works/index.html
+++ b/works/index.html
@@ -68,6 +68,8 @@
             <li>
                 <h4>[Flyer]PURIKURA MIND pre. "MY SOUL YOUR BEATS"</h4>
                 <p>Release:2025.07.09<br>
+                    Illustrated by キムラ
+                    <br>
                     From. PURIKURA MIND
                     <br>
                 <a href="https://t.livepocket.jp/e/my_soul_your_beats" target="_blank" rel="noopener noreferrer">→Buy</a>
