--- a/works/index.html
+++ b/works/index.html
@@ -76,6 +76,8 @@
                     <br>
                 <a href="https://t.livepocket.jp/e/my_soul_your_beats" target="_blank" rel="noopener noreferrer">→Buy</a>
                 <br>
+                <a href="https://www.instagram.com/p/DNGOUGuTUEW/" target="_blank" rel="noopener noreferrer">→About</a>
+               <br>
             </p>
              </li>
           </ul> 
