--- a/works/index.html
+++ b/works/index.html
@@ -45,11 +45,27 @@
           <h1 class="subtitle">ALL WORKS</h1>
           <ul class="works">
             <li>
+                <img src="./all_works/juutaku_stk.jpg">
+            </li>
+            <li>
+                <h4>[Sticker]QuickStrike-009</h4>
+                <p>Release:2025.08.09  
+                    <br>
+                    Collaborated by unm_jutakujoho
+                    <br>
+                <a href="https://www.instagram.com/p/DNVc69qJ990" target="_blank" rel="noopener noreferrer">→About</a>
+                
+                <br>
+            </p>
+             </li>
+          </ul>
+          <ul class="works">
+            <li>
                 <img src="./all_works/twitter_jacket.png">
             </li>
             <li>
                 <h4>[Design]PURIKURA MIND - Twitter</h4>
-                <p>Release:2025.07.09
+                <p>Release:2025.08.06
                     
                     <br>
                     Illustrated by キムラ
