--- a/works/index.html
+++ b/works/index.html
@@ -45,6 +45,23 @@
           <h1 class="subtitle">ALL WORKS</h1>
           <ul class="works">
             <li>
+                <img src="./all_works/synthe_flyer.jpg">
+            </li>
+            <li>
+                <h4>[Flyer]SYNTHETIC SENSE Vol.8"</h4>
+                <p>Release:2025.10.10<br>
+                    
+                    From. H B
+                    <br>
+                <a href="https://syntheticsense.net/" target="_blank" rel="noopener noreferrer">→Join</a>
+                <br>
+                <a href="https://www.instagram.com/p/DNGOUGuTUEW/" target="_blank" rel="noopener noreferrer">→About</a>
+               <br>
+            </p>
+             </li>
+          </ul> 
+          <ul class="works">
+            <li>
                 <img src="./all_works/void_collab.jpg">
             </li>
             <li>
