--- a/works/index.html
+++ b/works/index.html
@@ -48,7 +48,7 @@
                 <img src="./all_works/synthe_flyer.jpg">
             </li>
             <li>
-                <h4>[Flyer]SYNTHETIC SENSE vol.8"</h4>
+                <h4>[Flyer]SyntheticSense vol.8"</h4>
                 <p>Release:2025.10.10<br>
                     
                     From. H B
