--- a/works/index.html
+++ b/works/index.html
@@ -45,6 +45,24 @@
           <h1 class="subtitle">ALL WORKS</h1>
           <ul class="works">
             <li>
+                <img src="./all_works/3day_0.png">
+            </li>
+            <li>
+                <h4>[Flyer]CAGAYAKE!3DAYS</h4>
+                <p>Release:2025.11.15
+                    
+                    <br>
+                    Illustrated by キムラ
+                    <br>
+                    From. PURIKURA MIND
+                <a href="https://livepocket.jp/t/cagayake" target="_blank" rel="noopener noreferrer">→Buy</a>
+                
+                <br>
+            </p>
+             </li>
+          </ul>
+          <ul class="works">
+            <li>
                 <img src="./all_works/maidattack.jpg">
             </li>
             <li>
