--- a/works/index.html
+++ b/works/index.html
@@ -43,6 +43,55 @@
           </header>
           <div id="content">
           <h1 class="subtitle">ALL WORKS</h1>
+                    <ul class="works">
+            <li>
+                <img src="./all_works/tcs_shouhin.png">
+            </li>
+            <li>
+                <h4>[Clothes]戈址×金中高貴 - thousand cross sweatshirt</h4>
+                <p>Release:2025.11.22<br>
+                    Illustrated by 金中高貴<br>
+                    <a href="https://blmsh.base.shop/items/126085082" target="_blank" rel="noopener noreferrer">→Buy</a>
+                <br>
+                <a href="https://www.instagram.com/p/DRW7c49E62B/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+            </ul>
+          <ul class="works">
+            <li>
+                <img src="./all_works/alter_shouhin.png">
+            </li>
+            <li>
+                <h4>[Clothes]戈址×金中高貴 - alter hoodie</h4>
+                <p>Release:2025.11.22<br>
+                    Illustrated by 金中高貴<br>
+                    <a href="https://blmsh.base.shop/items/126084199" target="_blank" rel="noopener noreferrer">→Buy</a>
+                <br>
+                <a href="https://www.instagram.com/p/DRW7Be7k42M/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+            </ul>
+          <ul class="works">
+            <li>
+                <img src="./all_works/kmsw_stckr1.jpg">
+            </li>
+            <li>
+                <h4>[Sticker]EX MACHINA  ×「にゅーす・ぺぃぱ～！」コラボステッカー</h4>
+                <p>Release:2025.11.24
+                    
+                    <br>
+                    Designed by EX MACHINA
+                    <br>
+                <a href="https://ren-0.booth.pm/items/7687060" target="_blank" rel="noopener noreferrer">→Buy</a>
+                    <br>
+                <a href="https://www.instagram.com/p/DRgxgAjk9yg/" target="_blank" rel="noopener noreferrer">→About</a>
+                
+                <br>
+            </p>
+             </li>
+          </ul>
           <ul class="works">
             <li>
                 <img src="./all_works/3day_0.png">
