--- a/works/index.html
+++ b/works/index.html
@@ -84,7 +84,7 @@
                     <br>
                     Designed by EX MACHINA
                     <br>
-                <a href="https://ren-0.booth.pm/items/7687060" target="_blank" rel="noopener noreferrer">→Buy</a>
+                <a href="https://blmsh.base.shop/items/126816522" target="_blank" rel="noopener noreferrer">→Buy</a>
                     <br>
                 <a href="https://www.instagram.com/p/DRgxgAjk9yg/" target="_blank" rel="noopener noreferrer">→About</a>
                 
