--- a/link/index.html
+++ b/link/index.html
@@ -69,6 +69,7 @@
                 <tr>
                   <th><a href="https://x.com/_ramo404" target="_blank" rel="noreferrer noopener"><img src="./banner/ramo404.png" width="200px" height="auto" border="0"alt="ramo404 twitterバナー"></a></th>
                   <th><a href="https://carumecuo.tumblr.com" target="_blank" rel="noreferrer noopener"><img src="./banner/carumecuo.png" width="200px" height="auto" border="0"alt="carumecuo tumblrバナー"></a></th>
+                  <th><a href="https://hozumi.site/" target="_blank" rel="noreferrer noopener"><img src="./banner/blue-room-banner.avif" alt="あなたは青い部屋が好きですか？" width="200px" height="auto" border="0"alt="hozumi サイトバナー"></a></th>
                 </tr>
 
 
