--- a/link/index.html
+++ b/link/index.html
@@ -73,6 +73,7 @@
                 </tr>
                 <tr>
                   <th><a href="https://gradierwerk.github.io"target="_blank" rel="noreferrer noopener"><img src="https://gradierwerk.github.io/banner.png"></a></th>
+                  <th><a href="https://x.com/YOOM_PROD" target="_blank" rel="noreferrer noopener"><img src="./banner/banner.png" width="200px" height="auto" border="0"alt="ヨオム twitterバナー"></a></th>
                 </tr>
 
 
