--- a/works/index.html
+++ b/works/index.html
@@ -113,6 +113,26 @@
           </ul>
           <ul class="works">
             <li>
+                <img src="./all_works/ykd_samune.png">
+            </li>
+            <li>
+                <h4>[Design]夕張工業団地 - 終わらない夏(demo)</h4>
+                <p>Release:2025.11.11
+                    <br>
+                    Logo design: 戈址
+                    <br>
+                    From. 夕張工業団地
+                    <br>
+                <a href="https://youtu.be/Mifri_TC_HI?si=cAR6gq8S4VyXBA68" target="_blank" rel="noopener noreferrer">→Watch</a>
+                    <br>
+                <a href="https://www.instagram.com/p/DRkCGDrE5gd/" target="_blank" rel="noopener noreferrer">→About</a>
+                
+                <br>
+            </p>
+             </li>
+          </ul>
+          <ul class="works">
+            <li>
                 <img src="./all_works/maidattack.jpg">
             </li>
             <li>
