--- a/works/index.html
+++ b/works/index.html
@@ -62,7 +62,7 @@
           </ul>          
           <ul class="works">
             <li>
-                <img src="./all_works/tcs_shouhin.png">
+                <img src="./all_works/tcs.jpg">
             </li>
             <li>
                 <h4>[Clothes]戈址×金中高貴 - thousand cross sweatshirt</h4>
@@ -70,14 +70,14 @@
                     Illustrated by 金中高貴<br>
                     <a href="https://blmsh.base.shop/items/126085082" target="_blank" rel="noopener noreferrer">→Buy</a>
                 <br>
-                <a href="https://www.instagram.com/p/DRW7c49E62B/" target="_blank" rel="noopener noreferrer">→About</a>
+                <a href="https://www.instagram.com/p/DTR6flCk3P4/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
              </li>
             </ul>
           <ul class="works">
             <li>
-                <img src="./all_works/alter_shouhin.png">
+                <img src="./all_works/alter.jpg">
             </li>
             <li>
                 <h4>[Clothes]戈址×金中高貴 - alter hoodie</h4>
@@ -85,7 +85,7 @@
                     Illustrated by 金中高貴<br>
                     <a href="https://blmsh.base.shop/items/126084199" target="_blank" rel="noopener noreferrer">→Buy</a>
                 <br>
-                <a href="https://www.instagram.com/p/DRW7Be7k42M/" target="_blank" rel="noopener noreferrer">→About</a>
+                <a href="https://www.instagram.com/p/DTR5QI_E_xL" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
              </li>
