--- a/link/index.html
+++ b/link/index.html
@@ -74,7 +74,11 @@
                 <tr>
                   <th><a href="https://gradierwerk.github.io"target="_blank" rel="noreferrer noopener"><img src="https://gradierwerk.github.io/banner.png"></a></th>
                   <th><a href="https://x.com/YOOM_PROD" target="_blank" rel="noreferrer noopener"><img src="./banner/banner.png" width="200px" height="auto" border="0"alt="ヨオム twitterバナー"></a></th>
-                  <th><a href="https://setsuretsu.com/" target="_blank" rel="noreferrer noopener"><img src="./banner/setsuretsu.png" width="200px" height="auto" border="0"alt="ヨオム twitterバナー"></a></th>
+                  <th><a href="https://setsuretsu.com/" target="_blank" rel="noreferrer noopener"><img src="./banner/setsuretsu.png" width="200px" height="auto" border="0"alt="拙劣 サイトバナー"></a></th>
+                </tr>
+                <tr>
+                  <th><a href="https://mfworks.site"target="_blank" rel="noreferrer noopener"><img src="./banner/mf_works.png" width="200px" height="auto" border="0"alt="mf_works バナー"></a></th>
+                  
                 </tr>
 
 
