--- a/link/index.html
+++ b/link/index.html
@@ -77,7 +77,7 @@
                   <th><a href="https://setsuretsu.com/" target="_blank" rel="noreferrer noopener"><img src="./banner/setsuretsu.png" width="200px" height="auto" border="0"alt="拙劣 サイトバナー"></a></th>
                 </tr>
                 <tr>
-                  <th><a href="https://mfworks.site"target="_blank" rel="noreferrer noopener"><img src="./banner/mf_works.png" width="200px" height="auto" border="0"alt="mf_works バナー"></a></th>
+                  <th><a href="https://mfworks.net/"target="_blank" rel="noreferrer noopener"><img src="./banner/mf_works.png" width="200px" height="auto" border="0"alt="mf_works バナー"></a></th>
                   
                 </tr>
 
