--- a/works/index.html
+++ b/works/index.html
@@ -54,6 +54,8 @@
                     <br>
                     From. 夕張工業団地
                     <br>
+                    <a href="https://linkco.re/3bfvgfsb" target="_blank" rel="noopener noreferrer">→Streaming</a>
+                <br>
                 <a href="https://www.instagram.com/p/DSzns2nk3Vv/" target="_blank" rel="noopener noreferrer">→About</a>
                 
                 <br>
