--- a/works/index.html
+++ b/works/index.html
@@ -248,7 +248,7 @@
                 <img src="./all_works/sekaikei.jpg">
             </li>
             <li>
-                <h4>[Apparel]SEKSI-KEI T-SHIRT'S</h4>
+                <h4>[Apparel]SEKAI-KEI T-SHIRT'S</h4>
                 <p>Release:2025.09.25
                     <br>
                     Illustrated by キムラ
