--- a/works/index.html
+++ b/works/index.html
@@ -45,6 +45,35 @@
           <h1 class="subtitle">ALL WORKS</h1>
           <ul class="works">
             <li>
+                <img src="./all_works/hanyan.png">
+            </li>
+            <li>
+                <h4>[Apparel]はにゃんTしゃつ</h4>
+                <p>Release:2026.01.25<br>
+                    Illustrated by セサミ
+                <br>
+                <a href="https://www.instagram.com/p/DTiFLEHEyo9/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+            </ul>
+          <ul class="works">
+            <li>
+                <img src="./all_works/torikeshi.png">
+            </li>
+            <li>
+                <h4>[Apparel]送信取消T</h4>
+                <p>Release:2026.01.25<br>
+                    Illustrated by セサミ
+                <br>
+                <a href="https://www.instagram.com/p/DTiFLEHEyo9/" target="_blank" rel="noopener noreferrer">→About</a>
+                <br>
+            </p>
+             </li>
+            </ul>
+           
+          <ul class="works">
+            <li>
                 <img src="./all_works/yubari_jacket.png">
             </li>
             <li>
