--- a/works/index.html
+++ b/works/index.html
@@ -45,28 +45,30 @@
           <h1 class="subtitle">ALL WORKS</h1>
           <ul class="works">
             <li>
-                <img src="./all_works/hanyan.png">
+                <img src="./all_works/sesa_1.jpg">
             </li>
             <li>
                 <h4>[Apparel]はにゃんTしゃつ</h4>
                 <p>Release:2026.01.25<br>
-                    Illustrated by セサミ
+                    Illustrated by セサミ<br>
+                <a href="https://sesamisesasesa.booth.pm/items/7920799" target="_blank" rel="noopener noreferrer">→Buy</a>
                 <br>
-                <a href="https://www.instagram.com/p/DTiFLEHEyo9/" target="_blank" rel="noopener noreferrer">→About</a>
+                <a href="https://www.instagram.com/p/DT7xe0aE6f6/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
              </li>
             </ul>
           <ul class="works">
             <li>
-                <img src="./all_works/torikeshi.png">
+                <img src="./all_works/sesa_2.jpg">
             </li>
             <li>
                 <h4>[Apparel]送信取消T</h4>
                 <p>Release:2026.01.25<br>
-                    Illustrated by セサミ
+                    Illustrated by セサミ<br>
+                <a href="https://sesamisesasesa.booth.pm/items/7920717" target="_blank" rel="noopener noreferrer">→Buy</a>
                 <br>
-                <a href="https://www.instagram.com/p/DTiFLEHEyo9/" target="_blank" rel="noopener noreferrer">→About</a>
+                <a href="https://www.instagram.com/p/DT7w7xEk6ju/" target="_blank" rel="noopener noreferrer">→About</a>
                 <br>
             </p>
              </li>
